--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -13,4 +13,7 @@ html
     == javascript_include_tag  "all"
 
   body class="#{page_classes}"
+  == partial "header"
   == yield
+  == partial "footer"
+
