--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -7,7 +7,8 @@ html
     meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"
 
     /! Use title if it's in the page YAML frontmatter
-    title == data.page.title || "アダ街！学生文化祭"
+    - title = data.page.title + " - アダ街！学生文化祭" unless data.page.title.nil?
+    title == title || "アダ街！学生文化祭"
 
     == stylesheet_link_tag "normalize", "all"
     == javascript_include_tag  "all"
