upgrade index.html

--- a/source/_header.slim
+++ b/source/_header.slim
@@ -4,9 +4,7 @@ nav.navbar.navbar-default role="navigation"
     .navbar-header
       button.navbar-toggle type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
         span.sr-only Toggle navigation
-        span.icon-bar
-        span.icon-bar
-        span.icon-bar
+        span.glyphicon.glyphicon-arrow-down
       == link_to "アダ街！学生文化祭", '/index.html', :class => 'navbar-brand'
     .collapse.navbar-collapse id="bs-example-navbar-collapse-1"
       ul.nav.navbar-nav.navbar-right
