--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -4,7 +4,23 @@
 body {
   background: #d4d4d4 url("../images/background.png");
   text-align: center;
-  font-family: sans-serif; }
+  font-family: sans-serif;
+}
+
+p {
+  font-size: 1.1em;
+  line-height: 1.7em;
+}
+
+header {
+  font-size: 36px;
+  font-weight: bold;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, .5);
+}
+
+section{
+  overflow: auto;
+}
 
 h1 {
   color: rgba(0, 0, 0, .3);
@@ -13,44 +29,30 @@ h1 {
   letter-spacing: -1px;
   text-transform: uppercase;
   text-shadow: 0 1px 0 rgba(255, 255, 255, .5);
-  background: url("../images/middleman.png") no-repeat center 100px;
-  padding: 350px 0 10px;
-  margin: 0; }
+  padding: 10px 0 10px;
+  margin: 0;
+}
+
+section#hold { 
+  .hold-date {
+    font-size: 32px;
+  }
+}
 
 .doc {
   font-size: 14px;
-  margin: 0; }
-  .doc:before,
-  .doc:after {
+  margin: 0;
+  &:before,
+  &:after {
     opacity: .2;
     padding: 6px;
     font-style: normal;
     position: relative;
-    content: "•"; }
-  .doc a {
-    color: rgba(0, 0, 0, 0.3); }
-    .doc a:hover {
-      color: #666; }
-
-.welcome {
-  -webkit-animation-name: welcome;
-  -webkit-animation-duration: .9s; }
-
-@-webkit-keyframes welcome {
-  from {
-    -webkit-transform: scale(0);
-    opacity: 0;
+    content: "•";
   }
-  50% {
-   -webkit-transform: scale(0);
-   opacity: 0;
-  }
-  82.5% {
-    -webkit-transform: scale(1.03);
-    -webkit-animation-timing-function: ease-out;
-    opacity: 1;
-  }
-  to {
-    -webkit-transform: scale(1);
+  a {
+  color: rgba(0, 0, 0, 0.3); }
+  &:hover {
+    color: #666;
   }
 }
