--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,30 +1,40 @@
 ---
 ---
-section#hold
-  //↓ここは画像にした方がいいかも
-  p.hold-date
-    | アダ街！学生文化祭<br>
-    | 東京都足立区にて<br>
-    | 2015.1.29 - 1.30開催
+
+== tag :img, src: "images/top.jpg", class: "img-responsive top-img"
 
 section
-  h1 アダ街！学生文化祭とは？
-  //ここに画像を挿入
-  p 
-    | アダ街！学生文化祭とは、足立区の学生と足立区の商店街がタッグを組んだ
-      足立区の一大イベント。<br>
-      学生たちがこの日のために準備した様々なイベントを
-      商店街の素敵なお店で一緒に楽しみましょう！<br>
-      (1分で考えた適当な内容)
+  #hold
+    //↓ここは画像にした方がいいかも
+    p.hold-date
+      | アダ街！学生文化祭<br>
+      | 東京都足立区<br>
+      | 2015.1.29 - 1.30
+
+section
+  .top
+    h1 アダ街！学生文化祭とは？
+    //ここに画像を挿入
+    == tag :img, src: "images/top.jpg", class: "img-responsive"
+
+    p
+      | アダ街！学生文化祭とは、足立区の学生と足立区の商店街がタッグを組んだ
+        足立区の一大イベント。<br>
+        学生たちがこの日のために準備した様々なイベントを
+        商店街の素敵なお店で一緒に楽しみましょう！<br>
+        (1分で考えた適当な内容)
 
 // うまそうな飯の画像のっければよくね？
 section#shop
   h1 参加店舗
   //jsでランダム表記
   ul.list-group
-    li.list-group-item A店
-    li.list-group-item B店
-    li.list-group-item C店
+    - (1..3).each do |i|
+      li.list-group-item
+        == tag :img, src: "images/a#{i}.jpg", class: "img-responsive"
+    / li.list-group-item A店
+    / li.list-group-item B店
+    / li.list-group-item C店
 
 section
   h1.page-header どんなイベントをするの？
