--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,60 +1,56 @@
 ---
 ---
 
-== tag :img, src: "images/top.jpg", class: "img-responsive top-img"
+section.top-img
+  .container
+    .main-title
+      | アダ街！学生祭！<br>
+      | 2015/1/30〜2/1
 
 section
   #hold
-    //↓ここは画像にした方がいいかも
     p.hold-date
       | アダ街！学生文化祭<br>
       | 東京都足立区<br>
       | 2015.1.29 - 1.30
 
-section
-  .top
-    h1 アダ街！学生文化祭とは？
-    //ここに画像を挿入
-    == tag :img, src: "images/top.jpg", class: "img-responsive"
+.container
+  section#recruit
+    ul.list-group
+      li.list-group-item 東京電機大学
+      li.list-group-item 東京電機大学
+      li.list-group-item 東京電機大学
 
-    p
-      | アダ街！学生文化祭とは、足立区の学生と足立区の商店街がタッグを組んだ
-        足立区の一大イベント。<br>
-        学生たちがこの日のために準備した様々なイベントを
-        商店街の素敵なお店で一緒に楽しみましょう！<br>
-        (1分で考えた適当な内容)
+  / section#shop
+    / h1 参加店舗
+    / //jsでランダム表記
+    / ul.list-group
+      / - (1..3).each do |i|
+        / li.list-group-item
+          / == tag :img, src: "images/a#{i}.jpg", class: "img-responsive"
+      / / li.list-group-item A店
+      / / li.list-group-item B店
+      / / li.list-group-item C店
 
-// うまそうな飯の画像のっければよくね？
-section#shop
-  h1 参加店舗
-  //jsでランダム表記
-  ul.list-group
-    - (1..3).each do |i|
-      li.list-group-item
-        == tag :img, src: "images/a#{i}.jpg", class: "img-responsive"
-    / li.list-group-item A店
-    / li.list-group-item B店
-    / li.list-group-item C店
+  / section
+    / h1.page-header どんなイベントをするの？
+    / p vimやvimやvimなどなどわくわくするようなイベントを用意してお待ちしています。
+    / == link_to "もっとくわしく", '/eventlist.html'
 
-section
-  h1.page-header どんなイベントをするの？
-  p vimやvimやvimなどなどわくわくするようなイベントを用意してお待ちしています。
-  == link_to "もっとくわしく", '/eventlist.html'
+  / section#summary
+    / h2 開催日程
+    / p 2015年1月29(金)~1月31(日)
+    / h2 受付場所
+    / p 足立区1-1-1 まるまる
+    / h2 お問い合わせ先
+    / p 000-000-0000
+    / h2 主催
+    / p アダ街！製作委員会
+    / h2 協賛企業
+    / p 赤芽(株)
 
-section#summary
-  h2 開催日程
-  p 2015年1月29(金)~1月31(日)
-  h2 受付場所
-  p 足立区1-1-1 まるまる
-  h2 お問い合わせ先
-  p 000-000-0000
-  h2 主催
-  p アダ街！製作委員会
-  h2 協賛企業
-  p 赤芽(株)
-
-section#hold
-  // ここは画像にした方がいいかも
-  p.hold-date
-    | 東京都足立区にて  
-    | 2015.1.29 - 1.30開催
+  / section#hold
+    / // ここは画像にした方がいいかも
+    / p.hold-date
+      / | 東京都足立区にて  
+      / | 2015.1.29 - 1.30開催
