--- a/source/layouts/_footer.slim
+++ b/source/layouts/_footer.slim
@@ -1,2 +1,3 @@
-footer#footer
-  p Copyright &copy 2014 @akameco & @pear510
+.footer.navbar-default
+  .container
+    p Copyright &copy 2014 @akameco & @pear510
