--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -5,52 +5,45 @@ section.top-img
   .container
     .main-title
       | アダ街！学生祭！<br>
-      | 2015/1/30〜2/1
+      | 2015/1/31〜2/1
 
-section
-  #hold
-    p.hold-date
-      | アダ街！学生文化祭<br>
-      | 東京都足立区<br>
-      | 2015.1.29 - 1.30
+#top
+  .container
+    section
+      h2 アダ街！学生祭！とは？
+      p 足立区の学生による〜
 
-.container
-  section#recruit
-    ul.list-group
-      li.list-group-item 東京電機大学
-      li.list-group-item 東京電機大学
-      li.list-group-item 東京電機大学
+    section
+      h2 出展団体
 
-  / section#shop
-    / h1 参加店舗
-    / //jsでランダム表記
-    / ul.list-group
-      / - (1..3).each do |i|
-        / li.list-group-item
-          / == tag :img, src: "images/a#{i}.jpg", class: "img-responsive"
-      / / li.list-group-item A店
-      / / li.list-group-item B店
-      / / li.list-group-item C店
+    section
+      h2 店舗
 
-  / section
-    / h1.page-header どんなイベントをするの？
-    / p vimやvimやvimなどなどわくわくするようなイベントを用意してお待ちしています。
-    / == link_to "もっとくわしく", '/eventlist.html'
+    section#recruit
+      h2 協賛
+      ul.list-group
+        li.list-group-item 株式会社CAN
+        li.list-group-item CROSS WAVE SNEJU
+        li.list-group-item 足立経済新聞
 
-  / section#summary
-    / h2 開催日程
-    / p 2015年1月29(金)~1月31(日)
-    / h2 受付場所
-    / p 足立区1-1-1 まるまる
-    / h2 お問い合わせ先
-    / p 000-000-0000
-    / h2 主催
-    / p アダ街！製作委員会
-    / h2 協賛企業
-    / p 赤芽(株)
+    section#info
+      p 2015年1月31日(土) 2月1日(日)
 
-  / section#hold
-    / // ここは画像にした方がいいかも
-    / p.hold-date
-      / | 東京都足立区にて  
-      / | 2015.1.29 - 1.30開催
+    / section#shop
+      / h1 参加店舗
+      / //jsでランダム表記
+      / ul.list-group
+        / - (1..3).each do |i|
+          / li.list-group-item
+            / == tag :img, src: "images/a#{i}.jpg", class: "img-responsive"
+        / / li.list-group-item A店
+        / / li.list-group-item B店
+        / / li.list-group-item C店
+
+    / section#summary
+      / h2 お問い合わせ先
+      / p 000-000-0000
+      / h2 主催
+      / p アダ街！製作委員会
+      / h2 協賛企業
+      / p 赤芽(株)
