--- a/source/layouts/_header.slim
+++ b/source/layouts/_header.slim
@@ -11,10 +11,6 @@ nav.navbar.navbar-default role="navigation"
         li
           == link_to "イベント一覧", '/eventlist.html'
         li
-          == link_to "参加店舗一覧", '/shoplist.html'
+          == link_to "店舗一覧", '/shoplist.html'
         li
-          == link_to 'イベントマップ', '/map.html'
-        li
-          == link_to '協賛企業', '/sponsor.html'
-        li
-          == link_to '参加団体・委員会絶賛募集中', '/recruit.html'
+          == link_to '問い合わせ', '/recruit.html'
