--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -4,8 +4,8 @@
 section.top-img
   .container
     .main-title
-      | アダ街！学生祭！<br>
-      | 2015/1/31〜2/1
+      h1 アダ街！学生祭
+      p 2015/1/31〜2/1
 
 #top
   .container
