--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -18,11 +18,6 @@ body {
   height: 100%;
 }
 
-p {
-  font-size: 1.1em;
-  line-height: 1.7em;
-}
-
 header {
   font-size: 14px;
   font-weight: bold;
@@ -86,4 +81,15 @@ section {
 }
 
 #top {
+}
+
+.media {
+  img {
+    width: 300px;
+    height: auto;
+  }
+}
+
+.shop { 
+  margin-bottom: 5px;
 }
