event.ymlの構造をsubとnameに分離

--- a/source/eventlist.slim
+++ b/source/eventlist.slim
@@ -8,6 +8,7 @@ title: イベント一覧
       / .col-md-4
         img.img-responsive.img-rounded src=v.image
       .col-md-8
+        h5 = v.sub
         h4 = v.name
         p = v.text
 
