--- a/source/eventlist.slim
+++ b/source/eventlist.slim
@@ -5,7 +5,7 @@ title: イベント一覧
   h1 イベント一覧
   - data.event.list.each do |v|
     .row.event
-      / .col-md-4
+      .col-md-4
         img.img-responsive.img-rounded src=v.image
       .col-md-8
         h5 = v.sub
