--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -108,7 +108,7 @@ section {
   }
   img {
     width: 420px;
-    height: 280px;
+    height: 200px;
   }
   .event-item {
     margin: 15px 0 25px;
@@ -120,6 +120,11 @@ section {
 @media (min-width: $screen-sm-min) {
   body {
     font-size: 16px;
+  }
+  #event {
+    img {
+      height: 280px;
+    }
   }
 }
 
