--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -10,7 +10,7 @@ html
     - title = data.page.title + " - アダ街！学生祭" unless data.page.title.nil?
     title == title || "アダ街！学生祭"
 
-    == stylesheet_link_tag "normalize", "all"
+    == stylesheet_link_tag  "all"
     == javascript_include_tag  "all"
 
   body class="#{page_classes}"
