topページのfont及び文章追加

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -5,19 +5,20 @@ section.top-img
   .container
     .main-title
       h1 アダ街！学生祭
-      p 2015/1/31〜2/1
+      h2 2015/1/31〜2/1
+      h2 足立区と学生をつなぐ新しいカタチの学生祭
 
 #top
   .container
     section
-      h2 アダ街！学生祭！とは？
-      p 足立区の学生による〜
+      h2 アダ街！学生祭とは？
+      p 足足立区の学生による足立区の学生による足立区の学生による足立区の学生による足立区の学生による足立区の学生による足立区の学生による足立区の学生による足立区の学生による足立区の学生による足立区の学生による足立区の学生による足立区の学生による足立区の学生による足立区の学生による足立区の学生による足立区の学生による足立区の学生による足立区の学生による足立区の学生による立区の学生による
 
     section
-      h2 出展団体
+      h2 魅力的な企画がたくさん
 
     section
-      h2 店舗
+      h2 足立区のお店で楽しもう
 
     section#recruit
       h2 協賛
