--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -79,7 +79,10 @@ nav{
 .main-title{
   margin-top: 5%;
   color: #fff;
-  font-size: 40px;
+  /* font-size: 40px; */
+  h1,h2{
+    font-weight: bold;
+  }
 }
 
 #top {
