--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -16,9 +16,11 @@ section.top-img
 
     section
       h2 魅力的な企画がたくさん
+      = link_to "もっと見る",  "eventlist.html", class: "btn btn-primary"
 
     section
       h2 足立区のお店で楽しもう
+      = link_to "もっと見る", "shoplist.html", class: "btn btn-primary"
 
     section#recruit
       h2 協賛
