headerを日本語からenglishへ

--- a/source/layouts/_header.slim
+++ b/source/layouts/_header.slim
@@ -9,8 +9,10 @@ nav.navbar.navbar-default role="navigation"
     .collapse.navbar-collapse id="bs-example-navbar-collapse-1"
       ul.nav.navbar-nav.navbar-right
         li
-          == link_to "イベント一覧", '/eventlist.html'
+          == link_to "HOME", '/'
         li
-          == link_to "店舗一覧", '/shoplist.html'
+          == link_to "EVENT", '/eventlist.html'
         li
-          == link_to '問い合わせ', '/recruit.html'
+          == link_to "SHOP", '/shoplist.html'
+        li
+          == link_to 'CONTACT', '/recruit.html'
