--- a/source/layouts/_header.slim
+++ b/source/layouts/_header.slim
@@ -7,7 +7,7 @@ nav.navbar.navbar-default role="navigation"
         span.glyphicon.glyphicon-arrow-down
       == link_to "アダ街！学生祭", '/index.html', :class => 'navbar-brand'
     .collapse.navbar-collapse id="bs-example-navbar-collapse-1"
-      ul.nav.navbar-nav.navbar-right
+      ul.nav.navbar-nav.navbar-right#nav-right
         li
           == link_to "HOME", '/'
         li
