--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -1,10 +1,7 @@
 @charset "utf-8";
-$base: #FF934B;
-$second: white;
-$thred: #222222;
-$green: #CAE075;
-$green: #eeeeee;
-$green2: #9ab955;
+$base: white;
+$back: #EBEEED;
+$nav: #32393D;
 
 @import "bootstrap";
 @import "compass";
@@ -26,7 +23,7 @@ html{
 }
 
 body {
-  background-color: $second;
+  background-color: $back;
   height: 100%;
   font-size: 15px;
   line-height: 1.8em;
@@ -43,12 +40,15 @@ section{
 }
 
 // header
-nav{
-
-}
-
-.navbar-default {
-  button {
+#nav-right {
+  a {
+    &:hover {
+      border-bottom: {
+        width: 2px;
+        color: $nav;
+        style: solid;
+      }
+    }
   }
 }
 
@@ -58,12 +58,13 @@ nav{
 
 // footer
 .footer {
-  background: $green;
+  background: $nav;
   font-size: 11px;
   width: 100%;
   height: 30px;
   text-align: center;
   p {
+    color: white;
     padding: auto;
     margin: auto;
   }
@@ -86,6 +87,18 @@ nav{
 }
 
 #top {
+  section {
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+  #top-recruit {
+    text-align: center;
+    display: block;
+    margin: 20px 0;
+  }
+  .recruit-item {
+    margin-top: 30px;
+  }
 }
 
 
