--- a/source/eventlist.slim
+++ b/source/eventlist.slim
@@ -5,12 +5,12 @@ title: イベント一覧
   h1 イベント一覧
   - data.event.list.each do |v|
     .row.event-item
-      .event-sub
-        h4 = v.sub
-      .evnet-name
-        h3 = v.name
-      .col-md-5
-        img.img-responsive.img-rounded src=v.image
-      .col-md-7
+      .col-md-4.img-area
+        img.img-responsive src=v.image
+      .col-md-8.text-area
+        .event-sub
+          h4 = v.sub
+        .evnet-name
+          h3 = v.name
         p = v.text
 
