--- a/source/layouts/_footer.slim
+++ b/source/layouts/_footer.slim
@@ -1,3 +1,10 @@
-.footer.navbar-default
+#footer.navbar-default
   .container
-    p Copyright &copy 2014 @akameco & @pear510
+    .row
+      #footer-info.col-md-6
+        h1 アダ街！学生祭
+        h2 2015年1月31日(土) 2月1日(日)
+      .col-md-6
+        h2 ASN
+        = link_to "twitter", "#", class: "btn btn-default"
+    p#copy Copyright &copy 2014 @akameco & @pear510
