--- a/source/shoplist.slim
+++ b/source/shoplist.slim
@@ -9,9 +9,13 @@ section.top-img
  
 .container#shop
   - data.shop.each do |v|
-    .row.shop-item
-      a.col-md-4.img-area href=v.url
-        img.img-responsive src=v.image
-      .col-md-8.text-area
-        h3.shop-name = v.name
-        p = v.text
+    .shop-item
+      .row
+        a.col-sm-4.col-md-4.img-area href=v.url
+          img.img-responsive src=v.image
+        .col-sm-8.col-md-8.text-area
+          h3.shop-name = v.name
+          p = v.text
+          .icon-area.row
+            .col-md-4
+              == link_to "MAPで確認", "#", class: "btn btn-primary"
