--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -20,7 +20,7 @@ html{
 }
 
 body {
-  background-color: $back;
+  background-color: white;
   height: 100%;
   font-size: 15px;
   line-height: 1.8em;
@@ -129,7 +129,7 @@ section{
 @mixin box-item {
   background-color: white;
   display: block;
-  margin-bottom: 0;
+  margin-bottom: 30px;
   @media (min-width: $screen-sm-min) {
     margin-bottom: 60px;
   }
@@ -191,6 +191,7 @@ section{
 /* Small devices (tablets, 768px and up) */
 @media (min-width: $screen-sm-min) {
   body {
+    background-color: $back;
     font-size: 16px;
   }
 }
