footerにコンテンツの追加

--- a/source/layouts/_footer.slim
+++ b/source/layouts/_footer.slim
@@ -5,6 +5,22 @@
         h1 アダ街！学生祭
         h2 2015年1月31日(土) 2月1日(日)
       .col-md-6
-        h2 ASN
-        = link_to "twitter", "#", class: "btn btn-default"
-    p#copy Copyright &copy 2014 @akameco & @pear510
+        #ASN
+          .row
+            h2 ASN
+            p 主催
+          p 
+            |
+              わたしたちASN(Adachi Student Network)は
+              わたしたちASN(Adachi Student Network)は
+              わたしたちASN(Adachi Student Network)は
+              わたしたちASN(Adachi Student Network)は
+              わたしたちASN(Adachi Student Network)は
+              わたしたちASN(Adachi Student Network)は
+
+        a.btn.btn-default.footer-logo href="www.twitter.com"
+          img src="./images/logo/twitter.png" 
+        a.btn.btn-default.footer-logo href="www.twitter.com"
+          img src="./images/logo/fb.png" 
+    #copy
+      p Copyright &copy 2014 @akameco & @pear510
