--- a/source/shoplist.slim
+++ b/source/shoplist.slim
@@ -16,6 +16,8 @@ section.top-img
         .col-sm-8.col-md-8.text-area
           h3.shop-name = v.name
           p = v.text
-          .icon-area.row
-            .col-md-4
-              == link_to "MAPで確認", "#", class: "btn btn-primary"
+        .icon-area
+            == link_to "MAP", "#", class: "btn btn-primary"
+            == link_to "MAP", "#", class: "btn btn-primary"
+            == link_to "MAP", "#", class: "btn btn-primary"
+            == link_to "MAP", "#", class: "btn btn-primary"
