footerのデザインの改善

--- a/source/layouts/_footer.slim
+++ b/source/layouts/_footer.slim
@@ -3,24 +3,22 @@
     .row
       #footer-info.col-md-6
         h1 アダ街！学生祭
-        h2 2015年1月31日(土) 2月1日(日)
+        h2 2015年 1月31日(土) 2月1日(日)
       .col-md-6
-        #ASN
-          .row
+        #asn
+          a href="http://asn-web.com"
             h2 ASN
-            p 主催
-          p 
-            |
-              わたしたちASN(Adachi Student Network)は
-              わたしたちASN(Adachi Student Network)は
-              わたしたちASN(Adachi Student Network)は
-              わたしたちASN(Adachi Student Network)は
-              わたしたちASN(Adachi Student Network)は
-              わたしたちASN(Adachi Student Network)は
+          p わたしたちASN(Adachi Student Network)は学生と地域とのつながりを創り、地域社会をよりよいものにするために活動する足立区の学生団体です。
+          ul
+            li.f-data
+              a href="mailto:adachi.stdudent.network@gmail.com" E-mail: adachi.stdudent.network@gmail.com
+            li.f-data TEL: 070-5568-2281
 
-        a.btn.btn-default.footer-logo href="www.twitter.com"
-          img src="./images/logo/twitter.png" 
-        a.btn.btn-default.footer-logo href="www.twitter.com"
-          img src="./images/logo/fb.png" 
+
+          #asn-share
+            a.btn.btn-default.footer-logo href="www.twitter.com"
+              img src="./images/logo/twitter.png" 
+            a.btn.btn-default.footer-logo href="www.twitter.com"
+              img src="./images/logo/fb.png" 
     #copy
       p Copyright &copy 2014 @akameco & @pear510
