--- a/source/layouts/_header.slim
+++ b/source/layouts/_header.slim
@@ -14,5 +14,5 @@ nav.navbar.navbar-default role="navigation"
           == link_to "EVENT", '/eventlist.html'
         li
           == link_to "SHOP", '/shoplist.html'
-        li
-          == link_to 'CONTACT', '/recruit.html'
+        / li
+          / == link_to 'CONTACT', '/recruit.html'
