--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -26,6 +26,10 @@ body {
   line-height: 1.8em;
 }
 
+li {
+  list-style: outside none none;
+}
+
 header {
   font-size: 14px;
   font-weight: bold;
@@ -63,13 +67,28 @@ section{
     width: 40px;
     height: 40px;
   }
-  p {
-    text-size: 12px;
+  a {
+    text-decoration: none;
+    color: white;
+    &:hover{
+      color: $line;
+    }
   }
 }
 
-#ASN {
-  p {
+#footer-info {
+  margin-top: 50px;
+  display: block;
+  text-align: center;
+  @media (min-width: $screen-md-min) {
+    margin-top: 120px;
+    text-align: left;
+  }
+}
+
+#asn {
+  padding-top: 20px;
+  h2 {
     text-align: center;
   }
 }
@@ -86,10 +105,14 @@ section{
 .footer-logo{
   margin-right: 10px;
   margin-left: 10px;
+  background: white;
+  &:hover{
+    background: $line;
+  }
 }
 
-#footer-info {
-  display: block;
+#asn-share {
+  text-align: right;
 }
 
 // ページTOP
