--- a/source/layouts/_footer.slim
+++ b/source/layouts/_footer.slim
@@ -16,9 +16,9 @@
 
 
           #asn-share
-            a.btn.btn-default.footer-logo href="www.twitter.com"
+            a.btn.btn-default.footer-logo href="//www.twitter.com/ASN_PR"
               img src="./images/logo/twitter.png" 
-            a.btn.btn-default.footer-logo href="www.twitter.com"
+            a.btn.btn-default.footer-logo href="//www.facebook.com/adachi.students.network"
               img src="./images/logo/fb.png" 
     #copy
       p Copyright &copy 2014 @akameco & @pear510
