--- a/source/eventlist.slim
+++ b/source/eventlist.slim
@@ -18,4 +18,7 @@ title: イベント一覧
         .evnet-name
           h3 = v.name
         p = v.text
+      .logo-area
+        img.logo src="./images/logo/t.png"
+        img.logo src="./images/logo/f.jpg"
 
