--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -254,6 +254,27 @@ section{
   }
   .event-item {
     @include box-item;
+    position: relative;
+  }
+  .logo-area {
+    @media (min-width: $screen-md-min) {
+      text-align: left;
+      position: absolute;
+      bottom: 5px;
+      right: 20px;
+    }
+    * {
+      margin: 0 10px;
+      transition: all 1s ease;
+      &:hover {
+        transform: rotate(360deg);
+      }
+    }
+  }
+  .logo {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
   }
 }
 
