--- a/source/eventlist.slim
+++ b/source/eventlist.slim
@@ -11,7 +11,7 @@ title: イベント一覧
   - data.event.each do |v|
     .row.event-item
       .col-sm-4.col-md-4.img-area
-        img.img-responsive src=v.image
+        img.img-responsive.event-img src=v.image
       .col-sm-8.col-md-8.text-area
         .event-sub
           h4 = v.sub
