--- a/source/shoplist.slim
+++ b/source/shoplist.slim
@@ -19,5 +19,5 @@ title: 参加店舗一覧
         .icon-area
             == link_to "MAP", "#", class: "btn btn-primary"
             == link_to "MAP", "#", class: "btn btn-primary"
-            img.logo src="./images/logo/t.png"
-            img.logo src="./images/logo/f.jpg"
+            img.share src="./images/share/t.png"
+            img.share src="./images/share/f.jpg"
