--- a/source/layouts/_footer.slim
+++ b/source/layouts/_footer.slim
@@ -16,9 +16,9 @@
 
 
           #asn-share
-            a.btn.btn-default.footer-logo href="//www.twitter.com/adachi_asn"
-              img src="./images/logo/twitter.png" 
-            a.btn.btn-default.footer-logo href="//www.facebook.com/adachi.students.network"
-              img src="./images/logo/fb.png" 
+            a.btn.btn-default.footer-share href="//www.twitter.com/adachi_asn"
+              img src="./images/share/twitter.png" 
+            a.btn.btn-default.footer-share href="//www.facebook.com/adachi.students.network"
+              img src="./images/share/fb.png" 
     #copy
       p Copyright &copy 2014 @akameco & @pear510
