--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -20,7 +20,8 @@ html{
 }
 
 body {
-  background-color: white;
+  /* background-color: white; */
+  background-color: $back;
   height: 100%;
   font-size: 15px;
   line-height: 1.8em;
@@ -160,11 +161,35 @@ section{
   text-align: center;
   display: block;
   margin-top: 20px;
-  margin-bottom: 150px;
+  padding-bottom: 100px;
+  margin-bottom: 50px;
+  background-color: white;
+  .row {
+    margin-right: 0;
+  }
+  h2 {
+    font-weight: bold;
+  }
   ul {
     @include box-item;
-    margin-top: 30px;
-  } 
+    margin-top: 70px;
+    margin-left: -20px;
+  }
+  li {
+    text-align: center;
+    margin-top: 20px;
+    a {
+      font-size: 20px;
+      color: black;
+    }
+  }
+  @media (max-width: $screen-xs-max) {
+    padding-bottom: 20px;
+    margin-bottom: 10px;
+    ul {
+      margin-top: 40px;
+    }
+  }
 }
 
 // イベント・店舗 共用
