--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -16,10 +16,12 @@
 
     section
       h2 魅力的な企画がたくさん
+      p ここにコンテンツ
       = link_to "もっと見る",  "eventlist.html", class: "btn btn-primary"
 
     section
       h2 足立区のお店で楽しもう
+      p ここにコンテンツ
       = link_to "もっと見る", "shoplist.html", class: "btn btn-primary"
 
     section#top-sponsers
