--- a/source/eventlist.slim
+++ b/source/eventlist.slim
@@ -11,7 +11,7 @@ title: イベント一覧
   - data.event.each do |v|
     .row.event-item
       .col-sm-4.col-md-4.img-area
-        img.img-responsive.event-img src=v.image
+        == image_tag v.image, class: "img-responsive event-img"
       .col-sm-8.col-md-8.text-area
         .event-sub
           h4 = v.sub
@@ -19,6 +19,6 @@ title: イベント一覧
           h3 = v.name
         p = v.text
       .share-area
-        img.share src="./images/share/t.png"
-        img.share src="./images/share/f.jpg"
 
+        == image_tag "/images/share/t.png", class: "share"
+        == image_tag "/images/share/f.jpg", class: "share"
