--- a/source/layouts/_header.slim
+++ b/source/layouts/_header.slim
@@ -11,7 +11,7 @@ nav.navbar.navbar-default.navbar-fixed-top role="navigation"
     .collapse.navbar-collapse id="bs-example-navbar-collapse-1"
       ul.nav.navbar-nav.navbar-right#nav-right
         li
-          == link_to "HOME", '/'
+          == link_to "HOME", '/index.html'
         li
           == link_to "EVENT", '/eventlist.html'
         li
