--- a/source/css/all.css.scss
+++ b/source/css/all.css.scss
@@ -139,16 +139,29 @@ section{
 .top-img {
   background: url('../images/a2.jpg') no-repeat fixed center 0 / cover transparent;
   display: block;
-  min-height: 60%;
+  min-height: 90%;
   width: 100%;
+  position: relative;
 }
 
 .main-title{
-  margin-top: 5%;
+  border-left: 5px solid $line;
+  margin-top: 25%;
+  background-color: rgba(63, 63, 79, 0.8);
   color: #fff;
-  /* font-size: 40px; */
+  max-width: 720px;
+  padding: 20px 20px 30px;
+  @media (min-width: $screen-md-min) {
+    position: absolute;
+    left: 4%;
+    bottom: 30%;
+  }
   h1,h2{
     font-weight: bold;
+  }
+  h1{
+    font-weight: 50px;
+    line-height: 45px;
   }
 }
 
