--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -8,8 +8,10 @@ html
     meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"
 
     /! Use title if it's in the page YAML frontmatter
-    - title = data.page.title + " - アダ街！学生祭" unless data.page.title.nil?
-    title == title || "アダ街！学生祭"
+    - if current_page.data.title.present?
+      title = current_page.data.title
+    - else
+      title = yield_content(:title) + " - アダ街！学生祭"
 
     == stylesheet_link_tag  "all"
     == javascript_include_tag  "all"
