--- a/source/shop/template.slim
+++ b/source/shop/template.slim
@@ -1,7 +1,7 @@
 ---
 ---
-- content_for(:title, "#{list.name}")
+- content_for(:title, "#{shop.name}")
 #detail
   .container
-    h1 = list.name
-    p = list
+    h1 = shop.name
+    p = shop
